//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  userId String [pk, unique]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  firstname String
  lastname String
  email String [not null]
  Workspace Workspace [not null]
}

Table Workspace {
  workspaceId String [pk]
  slug String [unique, not null]
  user User [not null]
  userId String [not null]
  initialSetupComplete Boolean [not null, default: false]
  anonymousDataCollection Boolean [not null, default: false]
  IntegrationDefinition IntegrationDefinition [not null]
  IntegrationAccount IntegrationAccount [not null]
  IntegrationOAuthApp IntegrationOAuthApp [not null]
  deleted DateTime
  Link Link [not null]
}

Table IntegrationDefinition {
  integrationDefinitionId String [pk]
  name String [not null]
  key String [not null]
  icon String
  version String [not null, default: '0.0.1']
  releaseStage ReleaseStage [not null, default: 'ALPHA']
  sourceUrl String [not null]
  integrationType IntegrationType [not null]
  workspace Workspace
  workspaceId String
  IntegrationAccount IntegrationAccount [not null]
  IntegrationOAuthApp IntegrationOAuthApp [not null]
  deleted DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (integrationDefinitionId, key) [unique]
  }
}

Table IntegrationOAuthApp {
  integrationOAuthAppId String [pk]
  integrationOAuthAppName String [not null]
  integrationDefinition IntegrationDefinition [not null]
  integrationDefinitionId String [not null]
  clientId String [not null]
  clientSecret String [not null]
  scopes String [not null]
  workspace Workspace [not null]
  workspaceId String [not null]
  deleted DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (integrationOAuthAppName, workspaceId) [unique]
    (integrationDefinitionId, workspaceId) [unique]
  }
}

Table IntegrationAccount {
  integrationAccountId String [pk]
  integrationDefinition IntegrationDefinition [not null]
  integrationDefinitionId String [not null]
  integrationConfiguration Json
  authType String [not null]
  workspace Workspace [not null]
  workspaceId String [not null]
  integrationAccountName String [not null]
  deleted DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  accountIdentifier String
  syncEnabled Boolean [not null, default: false]
  syncPeriod String
  fromLinks Link
  linkId String
}

Table Link {
  linkId String [pk]
  linkName String [not null]
  canExpire Boolean [not null, default: false]
  expiresIn Int [not null]
  category IntegrationType[] [not null]
  integrationDefinitionId String
  preferOAuth Boolean [not null, default: false]
  workspace Workspace [not null]
  workspaceId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  IntegrationAccount IntegrationAccount [not null]
}

Table Job {
  jobId String [pk]
  temporalId String [not null]
  integrationAccountId String [not null]
  status JobStatus [not null]
  failedMessage String
  recordsSynced Int
  logs String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Enum JobStatus {
  PENDING
  RUNNING
  FAILED
  SUCCEEDED
}

Enum ReleaseStage {
  ALPHA
  BETA
  GENERALLY_AVAILABLE
  CUSTOM
}

Enum IntegrationType {
  HRIS
  MESSAGING
  CALENDAR
  TICKETING
  MAIL
  DOCUMENTATION
  ACCOUNTING
  ATS
  STORAGE
  PAYMENTS
}

Ref: Workspace.userId > User.userId

Ref: IntegrationDefinition.workspaceId > Workspace.workspaceId

Ref: IntegrationOAuthApp.integrationDefinitionId > IntegrationDefinition.integrationDefinitionId

Ref: IntegrationOAuthApp.workspaceId > Workspace.workspaceId

Ref: IntegrationAccount.integrationDefinitionId > IntegrationDefinition.integrationDefinitionId

Ref: IntegrationAccount.workspaceId > Workspace.workspaceId

Ref: IntegrationAccount.linkId > Link.linkId

Ref: Link.workspaceId > Workspace.workspaceId